Trying to add gear diff, doesn't quite work yet.

--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 
 <body>
 <h2>Knobs</h2><section>
-These affect all the simulations below.
-<span class="stats"><label for="watchful">Watchful</label>
+These affect all the simulations below.<br>
+<span class="stats"><label for="watchful">Watchful (with best gear)</label>
   <input id="watchful" type="number" value="167" min="0" max="999" size="3em"></span>
-<span class="stats"><label for="persuasive">Persuasive</label>
+<span class="stats"><label for="persuasive">Persuasive (with reduction gear)</label>
   <input id="persuasive" type="number" value="20" min="0" max="999"></span>
+<span class="stats"><label for="gear_diff">Difference between best and worst Watchful obtainable
+    with gear changes</label><input id="gear_diff" type="number" value="50" min="0" max="999"></span>
 <span class="stats"><label for="rare_chance">
   <a href="https://fallenlondon.fandom.com/wiki/Gift_your_Attar_in_tribute_to_the_Roseate_Queen">
     Gift your Attar</a> rare success chance</label>
