Fix spurious underscores.

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ The following action will be used to gain Attar in Far Arbor:
 <h2>Active Grinds</h2><section>
 These are active, where you can stay in Arbor for as long as you want. They
 center around
-<a href="https://fallenlondon.fandom.com/wiki/Investigate_the_Near-Arbori">Investigate_the_Near-Arbori</a>,
+<a href="https://fallenlondon.fandom.com/wiki/Investigate_the_Near-Arbori">Investigate the Near-Arbori</a>,
 which lets you trade Extraordinary Implications for Permission to Linger.
 <p>
 <span class="stats"><label for="batch_size">
